[package]
name = "sx127x_lora"
version = "0.3.1"
authors = ["Charles Wade <charles.wade@rockets.utoledo.edu>"]
repository = "https://github.com/mr-glt/sx127x_lora"
readme = "README.md"
edition = "2018"
license = "Apache-2.0"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["embedded-hal-driver","lora","sx1276","radio"]
description = "A platform-agnostic driver for Semtech SX1276/77/78/79 based boards."

[dependencies]
embedded-hal = "0.2.2"
bit_field = "0.9.0"