[package]
name = "rp2040"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
embedded-sdmmc = "0.9.0"
panic-halt = "1.0.0"
rp2040-hal = { version = "0.11.0", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3.0"
sx127x_lora = { path = "../../" }